[project]
name = "moderntensor"
version = "1.0.0"
description = "ModernTensor Stellar Testnet runtime and CLI"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "son", email = "sonlearn155@gmail.com" }]
keywords = ["stellar", "soroban", "decentralized-ai", "moderntensor"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
  "click>=8.1,<9",
  "rich>=13.7,<14",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "fastapi>=0.115,<1",
  "uvicorn>=0.34,<1",
  "httpx>=0.28,<1",
  "requests>=2.32,<3",
  "cryptography>=42,<46",
  "stellar-sdk>=12,<14",
  "python-dotenv>=1,<2",
  "Pillow>=10,<12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
  "respx>=0.21,<1",
]
subnet1 = [
  "torch>=2.2",
  "diffusers>=0.28",
  "transformers>=4.41",
  "accelerate>=0.30",
  "safetensors>=0.4",
  "clip-anytorch>=2.6",
]

[project.urls]
homepage = "https://github.com/sonson0910"

[project.scripts]
mtcli = "sdk.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: live Stellar Testnet tests gated by STELLAR_LIVE_TESTNET=1",
]
